# archmq

./: .gitmodules
code/: CMakeLists.txt
code/archmq/: CMakeLists.txt
code/archmq/inc/: archmq-prereq.hpp  control-endpoint.hpp  data-endpoint.hpp  globalhub.hpp  main-endpoint.hpp  master-endpoint.hpp  randomutil.hpp  stringutil.hpp  subscriber-collection.hpp  subscriber.hpp
code/archmq/src/: control-endpoint.cpp  data-endpoint.cpp  globalhub.cpp  main-endpoint.cpp  main.cpp  master-endpoint.cpp  randomutil.cpp  subscriber-collection.cpp  subscriber.cpp
code/archmq2/: CMakeLists.txt
code/archmq2/inc/: archmq2-prereq.hpp  archmq2.hpp  mqopts.hpp  stringutil.hpp
code/archmq2/src/: archmq2-api-dev-mode.hpp  mqopts.cpp
code/archmq2test/: CMakeLists.txt
code/archmq2test/src/: main.cpp
code/archmqtest/: CMakeLists.txt
code/archmqtest/src/: main.cpp
testfiles/: boot-archmq.bat  boot-archmq2test.bat  boot-archmqtest.bat
